--- a/web/themes/custom/girchi/templates/nodes/node--page--full.html.twig
+++ b/web/themes/custom/girchi/templates/nodes/node--page--full.html.twig
@@ -8,7 +8,7 @@
             <div class="card-header d-flex px-3 px-xl-4">
                 <span
                         class="d-none d-lg-block font-size-2 text-uppercase font-weight-bold text-grey"
-                >ჩვენს შესახებ</span
+                >ჩვენ შესახებ</span
                 >
                 <button
                         class="navbar-toggler d-flex d-lg-none"
@@ -21,7 +21,7 @@
                 >
                   <span
                           class="font-size-2 text-uppercase font-weight-bold text-grey"
-                  >ჩვენს შესახებ</span
+                  >ჩვენ შესახებ</span
                   >
                     <i
                             class="icon-menu-three-horizontal-lines-symbol font-size-4 text-success"
