--- a/web/modules/custom/girchi_referral/templates/top-referrals.html.twig
+++ b/web/modules/custom/girchi_referral/templates/top-referrals.html.twig
@@ -83,7 +83,7 @@
                     ></i>
                 </button>
             </div>
-            <div class="modal-body p-0">
+            <div class="modal-body p-0 table-responsive">
                 <table class="table m-0 table-hover">
                     <thead>
                     <tr class="bg-dark-white">
@@ -110,7 +110,7 @@
                             scope="col"
                             class="align-middle font-size-1 font-size-md-2 text-dark-silver border-0 text-center line-height-1-2"
                         >
-                            {{ "Referral benefits" |t  }}
+                            {{ "Benefits" |t  }}
                         </th>
                     </tr>
                     </thead>
@@ -144,11 +144,11 @@
                             <td class="text-right text-md-center align-middle">
                                 {% if user.referral_count <= 4  %}
                                     <ul
-                                        class="list-unstyled m-0 align-items-center d-none d-md-flex"
+                                        class="list-unstyled m-0 align-items-center d-md-flex"
                                     >
                                         {% for referral in user.referrals %}
 
-                                                <li class="d-inline-flex align-items-center">
+                                                <li class="align-items-center hidden-referrals">
                                                     <a
                                                         title="{{ referral.referral_name ~ ' ' ~ referral.referral_surname}}"
                                                         href="{{ path('entity.user.canonical', {'user' : referral.referral_id}) }}"
@@ -162,15 +162,25 @@
                                                         />
                                                     </a>
                                                 </li>
-
                                         {% endfor %}
+                                        <!-- only for mobile version -->
+                                        {% if user.referral_count >=1 %}
+                                        <li class="referral-count" >
+                                            <a
+                                                href="{{ path('entity.user.canonical', {'user' : user.uid, 'show_referral_modal' : 'true'}) }}"
+                                                class="btn btn-light btn-sm m-1 px-2 bg-hover-success text-hover-white politician-modal"
+                                            >
+                                                {{ user.referral_count }} +
+                                            </a>
+                                        </li>
+                                        {% endif %}
                                     </ul>
                                 {% else %}
                                     <ul
-                                        class="list-unstyled m-0 align-items-center d-none d-md-flex"
+                                        class="list-unstyled m-0 align-items-center d-md-flex"
                                     >
                                         {% for i in 0..3 %}
-                                            <li class="d-inline-flex align-items-center">
+                                            <li class="align-items-center hidden-referrals">
                                                 <a
                                                     title="{{ user.referrals[i]['referral_name'] ~ ' ' ~user.referrals[i]['referral_surname'] }}"
                                                     href="{{ path('entity.user.canonical', {'user' : user.referrals[i]['referral_id']}) }}"
@@ -185,12 +195,21 @@
                                                 </a>
                                             </li>
                                         {% endfor %}
-                                        <li>
+                                        <li class="ref-count">
                                             <a
                                                 href="{{ path('entity.user.canonical', {'user' : user.uid, 'show_referral_modal' : 'true'}) }}"
                                                 class="btn btn-light btn-sm m-1 px-2 bg-hover-success text-hover-white politician-modal"
                                             >
                                                 {{ user.referral_count - 4 }} +
+                                            </a>
+                                        </li>
+                                        <!-- only for mobile version -->
+                                        <li class="referral-count" >
+                                            <a
+                                                href="{{ path('entity.user.canonical', {'user' : user.uid, 'show_referral_modal' : 'true'}) }}"
+                                                class="btn btn-light btn-sm m-1 px-2 bg-hover-success text-hover-white politician-modal"
+                                            >
+                                                {{ user.referral_count }} +
                                             </a>
                                         </li>
                                     </ul>
