--- a/web/themes/custom/girchi/css/custom.css
+++ b/web/themes/custom/girchi/css/custom.css
@@ -1,3 +1,19 @@
+@media only screen and (max-width: 600px) {
+    .hidden-referrals {
+        display: none !important;
+    }
+    .referral-count{
+        display: block !important;
+    }
+    .ref-count{
+        display: none !important;
+    }
+
+}
+.referral-count{
+    display: none;
+}
+
 .fix {
   margin: 0 !important;
 }
