:sparkles: New template for regular donation form modal.

--- a/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
@@ -500,11 +500,9 @@
                                                                 <form action="">
                                                                     <div class="container py-2">
                                                                         <h6
-                                                                            class="text-uppercase m-0"
+                                                                            class="text-uppercase my-2"
                                                                         >
-                                                                            {{ 'Aim/Politician'|t }}: <b
-                                                                                class="text-success"
-                                                                                id="main-holder"></b>
+                                                                             <span id="main-holder"></span>
 
                                                                         </h6>
                                                                         <h6
