Change placeholder value.

--- a/web/modules/custom/girchi_donations/templates/girchi-donations-regular-edit.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations-regular-edit.html.twig
@@ -71,7 +71,7 @@
                                 class="select w-100"
                                 data-live-search="true"
                                 data-style="btn-white border btn-lg bg-hover-white rounded-oval btn-fix"
-                                title="რას აფინანსებ"
+                                title="დაფინანსების მიზეზი"
                                 data-none-results-text="არაფერი მოიძებნა"
                             >
                                 {% if entity_form.donation_aim is not null %}}
