--- a/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
+++ b/web/modules/custom/girchi_donations/templates/girchi-donations.html.twig
@@ -160,7 +160,7 @@
                                                         class="select w-100"
                                                         data-live-search="true"
                                                         data-style="btn-white border btn-lg bg-hover-white rounded-oval"
-                                                        title="რას აფინანსებ"
+                                                        title="რას/ვის აფინანსებ"
                                                         data-none-results-text="არაფერი მოიძებნა"
                                                     >
                                                         {% for aim_or_politician in aim_or_politicians %}
@@ -263,7 +263,7 @@
                                                         class="select w-100"
                                                         data-live-search="true"
                                                         data-style="btn-white border btn-lg bg-hover-white rounded-oval"
-                                                        title="რას აფინანსებ"
+                                                        title="რას/ვის აფინანსებ"
                                                         data-none-results-text="არაფერი მოიძებნა"
                                                     >
                                                         {% for aim_or_politician in aim_or_politicians %}
@@ -406,7 +406,7 @@
                                                         class="select w-100"
                                                         data-live-search="true"
                                                         data-style="btn-white border btn-lg bg-hover-white rounded-oval"
-                                                        title="რას აფინანსებ"
+                                                        title="რას/ვის აფინანსებ"
                                                         data-none-results-text="არაფერი მოიძებნა"
                                                     >
                                                         {% for aim_or_politician in aim_or_politicians %}
