--- a/web/themes/custom/girchi/css/custom.css
+++ b/web/themes/custom/girchi/css/custom.css
@@ -181,3 +181,7 @@ input[type=number]::-webkit-outer-spin-button {
 .width-control .dropdown-menu ul{
     height: 9.5rem;
 }
+
+.header-user-name {
+    margin-right: 3rem;
+}
