--- a/web/themes/custom/girchi/templates/header.htlm.twig
+++ b/web/themes/custom/girchi/templates/header.htlm.twig
@@ -175,6 +175,9 @@
                                     <span class="font-weight-bold line-height-0-7 ml-1">{{ user_header.ged|ged_long_format }}</span></span>
                                     </a>
                                 </h6>
+                                <nav class="notifications" id="notifications-sticky">
+
+                                </nav>
                                 <a href="{{ url("user.logout") }}"
                                    class="btn ml-auto ml-lg-2 btn-outline-light-silver btn-lg text-dark-silver font-size-5 rounded-circle line-height-0-2 px-2 line-height-md-0-6 px-md-3">
                                     <i class="icon-logout mx-1"></i>
