Fix progress bar.

--- a/web/themes/custom/girchi/templates/header.htlm.twig
+++ b/web/themes/custom/girchi/templates/header.htlm.twig
@@ -3,7 +3,7 @@
     <div
             class="progress-bar"
             role="progressbar"
-            style="width: 0%;"
+            style="width: 0%; overflow: visible!important;"
             aria-valuenow={{ header_config.ged_percentage }}
             aria-valuemin="0"
             aria-valuemax="100"
