--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -62,6 +62,11 @@
                             <label class="form-label" for="address">{{ "Address" | t }}</label>
                             {{ element.field_address }}
                         </div>
+                        <div class="form-group mb-2">
+                            <label class="form-label" for="address">{{ "Region" | t }}</label>
+                            {{ element.field_region }}
+                        </div>
+
                         <div class="form-group mb-2 ">
                             <label class="form-label" for="phone">{{ "Phone number" | t }}</label>
                             {{ element.field_tel }}
