--- a/web/themes/custom/girchi/templates/pages/page--user.html.twig
+++ b/web/themes/custom/girchi/templates/pages/page--user.html.twig
@@ -8,7 +8,7 @@
         <div class="card-body p-0">
             <img src="{{ user.field_cover_photo ? image_style_url(user.field_cover_photo, 'politicians_cover') : theme_path() ~ "/images/cover.jpg" }}" class="d-none d-md-block" width="100%" alt="ზურაბ ჯაფარიძე"/>
             <img src="{{ user.field_cover_photo ? image_style_url(user.field_cover_photo, 'politicians_cover_sm') : theme_path() ~ "/images/cover-sm.png" }}" class="d-block d-md-none" width="100%" alt="ზურაბ ჯაფარიძე"/>
-            <div class="bg-gradient-green {{ user.is_politician ? "p-3" : "p-4" }} d-flex justify-content-center justify-content-lg-between align-items-center flex-column flex-lg-row">
+            <div class="mt-n80 mt-lg-0 bg-gradient-green p-3 d-flex justify-content-center justify-content-lg-between align-items-center flex-column flex-lg-row">
                 <div class="position-relative position-lg-absolute w-150-px h-150-px w-md-220-px h-md-220-px mt-n10 mt-md-n14 mt-lg-0">
                     <div class="w-150-px h-150-px w-md-220-px h-md-220-px overflow-hidden rounded-circle bg-white border-4 border-solid border-white">
                         <img src="{{ user.user_picture ? image_style_url(user.user_picture, 'politicians_profile_picture') : theme_path() ~ "/images/avatar.png" }}" width="100%" alt="ზურაბ ჯაფარიძე"/>
@@ -22,36 +22,51 @@
                     {{ user.first_name ~ " " ~ user.last_name }}
                 </h4>
 
-                <div class="mb-n5 pb-2 p-lg-0 m-lg-0 d-inline-block">
+                <div
+                    class="pb-2 p-lg-0 m-lg-0 d-inline-flex align-items-center flex-column flex-lg-row mb-n50 mb-lg-0"
+                >
+                    <div class="d-inline-flex justify-content-center mx-lg-3 mb-3 mb-lg-0">
+                        {% if user.user_badges is not empty %}
+                            {% for badge in user.user_badges %}
+                                <i
+                                    class="icon-badge icon-badge-lg {{ badge.icon_name[badge.badge_name_en] }}"
+                                    data-toggle="tooltip"
+                                    data-placement="top"
+                                    title="{{ badge.badge_name }}"
+                                ></i>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
                     {% if user.is_politician %}
-                    <a class="btn btn-warning text-uppercase btn-lg ml-lg-auto text-nowrap" href="/donate?politician={{ user.id }}">
-                        {{ 'Donate to politician' | t }}
-                    </a>
+                        <a class="btn btn-warning text-uppercase btn-lg ml-lg-auto text-nowrap" href="/donate?politician={{ user.id }}">
+                            {{ 'Donate to politician' | t }}
+                        </a>
                     {% endif %}
                 </div>
-
             </div>
-            <div class="{{  user.is_politician ? "p-3" : "p-4" }} d-flex mt-4 mt-lg-0 flex-wrap flex-lg-nowrap justify-content-between align-items-center">
+            <div class="p-3 d-flex mt-4 mt-lg-0 flex-wrap flex-lg-nowrap justify-content-between align-items-center">
                 <div class="w-220-px mr-4 d-none d-lg-block"></div>
                 {% if user.is_politician %}
                 <div class="text-center text-lg-left d-flex flex-column mx-lg-3 w-50 w-lg-auto border-right border-right-lg-0 px-3 px-md-4 py-1 p-lg-0">
                     <label class="m-0 font-size-1 font-size-md-2 text-uppercase text-grey line-height-1-2 line-height-md-1-8">{{ 'Politician rating' | t }}</label>
                     <span class="text-warning font-weight-bold font-size-4 font-size-md-5 line-height-1-5 line-height-md-0-9">
+                         {{ user.political_ged|ged_long_format }}
                         <i class="icon-ged line-height-1-1 font-size-md-4 font-size-3"></i>
-                        {{ user.political_ged|ged_long_format }}
+
                     </span>
                 </div>
                 {% endif %}
                 <div class="text-center text-lg-left d-flex flex-column mx-lg-3 w-50 w-lg-auto px-3 px-md-4 px-lg-0">
-                    <label class="m-0 font-size-1 font-size-md-2 text-uppercase text-grey line-height-1-2 line-height-md-1-8">{{ 'Politician Ged' | t }}</label>
+                    <label class="m-0 font-size-1 text-uppercase text-grey line-height-1-2 line-height-md-1-8">{{ 'Politician Ged' | t }}</label>
                     <span class="text-success font-weight-bold font-size-4 font-size-md-5 line-height-1-5 line-height-md-0-9">
-                        <i class="icon-ged line-height-1-1 font-size-md-4 font-size-3"></i>{{ user.ged ? user.ged|ged_long_format : 0}}
+                        {{ user.ged ? user.ged|ged_long_format : 0}}
+                        <i class="icon-ged line-height-1-1 font-size-md-4 font-size-3"></i>
                     </span>
                 </div>
                 <div class="text-center text-lg-left d-flex flex-column mx-lg-3 w-50 w-lg-auto px-3 px-md-4 px-lg-0">
-                    <label class="m-0 font-size-1 font-size-md-2 text-uppercase text-grey line-height-1-2 line-height-md-1-8">{{ 'Referral benefits' | t }}</label>
+                    <label class="m-0 font-size-1 text-uppercase text-grey line-height-1-2 line-height-md-1-8">{{ 'Referral benefits' | t }}</label>
                     <span class="text-warning font-weight-bold font-size-4 font-size-md-5 line-height-1-5 line-height-md-0-9">
-                        <i class="line-height-1-1 font-size-md-4 font-size-3"></i>₾{{ user.referral_benefits ? user.referral_benefits|ged_long_format : 0}}
+                        {{ user.referral_benefits ? user.referral_benefits|ged_long_format : 0}}₾
                     </span>
                 </div>
 
@@ -102,7 +117,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="text-center mt-n4 position-relative">
+                        <div class="text-center mt-n30 position-relative">
                             <a class="btn btn-warning text-uppercase ml-md-auto text-nowrap mt-2 position-relative pl-4" data-target="#profileVideo" data-toggle="modal" href="#">
                                 <i class="icon-play-button font-size-5 position-absolute position-left-8-px position-top-3-px"></i>
                                 <span class="ml-2">{{ "Favorite Video"|t }}</span>
