Add badges to user edit form.

--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -102,47 +102,79 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="border bg-dark-white border-dashed rounded px-3 pt-3 px-sm-4 pt-sm-4 mb-3 pb-4">
-                        <div class="form-group mb-0">
-                            <span class="text-success text-success font-size-3 text-uppercase w-auto">
-                                 {{ 'Badges'|t }}
-                             </span>
-                            <p class="font-size-1 text-grey my-3">
-                                {{ 'თქვენ შეგიძლიათ მოიპოვოთ ბეჯები და დამალოთ ან გამოაჩინოთ ისინი საჯაროდ'|t }}
-                            </p>
-                        </div>
+                        <h6
+                            class="text-uppercase text-success font-weight-bold"
+                        >
+                            {{ 'Badges'|t }}
+                        </h6>
 
-                        <div class="form-group mb-2 p-1">
+                        <p class="font-size-3 text-grey">
+                            {{ 'თქვენ შეგიძლიათ მოიპოვოთ ბეჯები და დამალოთ ან გამოაჩინოთ ისინი საჯაროდ'|t }}
+                        </p>
                             {% for badge in badges %}
                                 {% set appearance_data = badge.appearance|twig_json_decode %}
-                                <div class="d-flex w-100 align-items-center p-2 form-control form-control-lg  fix badges-border mb-2"
-                                     data-id="{{ badge.id }}"
-                                     data-value="{{ badge.status }}"
+                                <div
+                                     {% if appearance_data.earned_badge == 1 and appearance_data.visibility == 1 %}
+                                         class="user-badge user-badge-visible"
+                                     {% elseif  appearance_data.earned_badge == 0 %}
+                                         class="user-badge user-badge-disabled"
+                                     {% else %}
+                                         class = "user-badge"
+                                     {% endif %}
                                 >
-                                  <span
-                                      class="rounded-circle overflow-hidden d-inline-block"
-                                  >
-                                    <img
-                                        src="{{ badge.logo ? image_style_url(badge.logo, 'avatar_34x34') : theme_path('/images/avatar34x34.png') }}"
-                                    />
-                                  </span>
-                                  <span class="mb-0 mx-3 font-weight-bold font-size-2  w-auto">{{ badge.name }}</span>
-                                    <div class="badge-visibility p-2 float-right ml-auto">
-                                        {% if (appearance_data.visibility == true and appearance_data.earned_badge == true )  %}
-                                        <span class="badge-visible font-size-4  shadow-none text-dark-silver text-hover-danger" >
-                                            <i class="icon-delete"></i>
-                                            <input class="hidden" name="badges[{{ badge.id }}]" value="{{ badge.appearance }}"  >
-                                        </span>
-                                        {% else %}
-                                        <span class="badge-invisible font-size-4  shadow-none text-dark-silver text-hover-danger" >
-                                            <i class="icon-ged"></i>
-                                            <input class="hidden" name="badges[{{ badge.id }}]" value="{{ badge.appearance }}"  >
-                                        </span>
+                                    <i
+                                        class="icon-badge icon-badge-lg {{ appearance_data.earned_badge == true ? badge.logo_name[badge.name] : badge.logo_name[badge.name] ~'-disabled' }} "
+                                    ></i>
+                                    <div class="user-badge-text">
+                                        <span class="user-badge-status"> {{ badge.name }} </span>
+                                        {% if appearance_data.status_message != ''%}
+                                        <span class="user-badge-hint"> {{ appearance_data.status_message }} </span>
                                         {% endif %}
                                     </div>
+
+                                    <button class="user-badge-visibility" type="button">
+                                        <input class="hidden" name="badges[{{ badge.id }}]" value="{{ badge.appearance }}"  >
+                                    </button>
                                 </div>
 
                             {% endfor %}
-                        </div>
+
+
+
+{#                        <div class="form-group mb-2 p-1">#}
+{#                            {% for badge in badges %}#}
+{#                                {{ drupal_dump(badge.logo_name[badge.name]) }}#}
+{#                                {% set appearance_data = badge.appearance|twig_json_decode %}#}
+{#                                <div class="d-flex w-100 align-items-center p-2 form-control form-control-lg  fix badges-border mb-2"#}
+{#                                     data-id="{{ badge.id }}"#}
+{#                                     data-value="{{ badge.status }}"#}
+{#                                >#}
+{#                                  <span#}
+{#                                      class="rounded-circle overflow-hidden d-inline-block"#}
+{#                                  >#}
+{#                                    <img#}
+{#                                        src="{{ image_style_url(badge.logo, 'avatar_34x34') }}"#}
+{#                                    />#}
+{#                                  </span>#}
+{#                                    <span class="mb-0 mx-3 font-weight-bold font-size-2  w-auto">{{ badge.name }}</span>#}
+{#                                    <div class="badge-visibility p-2 float-right ml-auto">#}
+{#                                        {% if (appearance_data.visibility == true and appearance_data.earned_badge == true )  %}#}
+{#                                            <span class="badge-visible font-size-4  shadow-none text-dark-silver text-hover-danger" >#}
+{#                                            <i class="icon-delete"></i>#}
+{#                                            <input class="hidden" name="badges[{{ badge.id }}]" value="{{ badge.appearance }}"  >#}
+{#                                        </span>#}
+{#                                        {% else %}#}
+{#                                            <span class="badge-invisible font-size-4  shadow-none text-dark-silver text-hover-danger" >#}
+{#                                            <i class="icon-ged"></i>#}
+{#                                            <input class="hidden" name="badges[{{ badge.id }}]" value="{{ badge.appearance }}"  >#}
+{#                                        </span>#}
+{#                                        {% endif %}#}
+{#                                    </div>#}
+{#                                </div>#}
+
+{#                            {% endfor %}#}
+{#                        </div>#}
+
                     </div>
 
 
