Show user handle field in user profile form. refs #708

--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -43,6 +43,10 @@
                             {{ element.field_personal_id }}
                         </div>
                         <div class="form-group mb-2">
+                            <label class="form-label" for="handle">{{ "Girchi Handle" | t }}</label>
+                            {{ element.field_girchi_handle }}
+                        </div>
+                        <div class="form-group mb-2">
                             <label class="form-label" for="disabled-email">{{ "Email" | t }}</label>
                             <div class="input-with-addon">
                                 <input type="email"
