--- a/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
+++ b/web/themes/custom/girchi/templates/forms/form--user-form.html.twig
@@ -66,7 +66,40 @@
                             <label class="form-label" for="address">{{ "Region" | t }}</label>
                             {{ element.field_region }}
                         </div>
-
+                        <div class="form-group mb-2 yle">
+                            <label class="form-label" for="last-name"
+                            >ქალაქი / რაიონი</label
+                            >
+                            <select
+                                name="country"
+                                id="country"
+                                multiple
+                                data-max-options="1"
+                                title="ქალაქი"
+                                class="selectpicker form-control form-control-lg pr-0"
+                                data-style="btn-lg btn-block"
+                            >
+                                {% for key, region in regions %}
+                                    {% if region.children is not null %}
+                                        <optgroup label="{{ region.region_name }}">
+                                            {% for key, child in region.children %}
+                                                {%  if(user_region == key) %}
+                                                    <option selected value={{key}}>{{child}} </option>
+                                                {% else %}
+                                                     <option value={{key}}>{{child}} </option>
+                                                {% endif %}
+                                            {% endfor %}
+                                        </optgroup>
+                                    {% else %}
+                                        {%  if(user_region == key) %}
+                                            <option selected value={{key}}>{{region.region_name}}</option>
+                                        {% else %}
+                                            <option value={{key}}>{{region.region_name}}</option>
+                                        {% endif %}
+                                    {% endif %}
+                                {% endfor %}
+                            </select>
+                        </div>
                         <div class="form-group mb-2 ">
                             <label class="form-label" for="phone">{{ "Phone number" | t }}</label>
                             {{ element.field_tel }}
