--- a/web/modules/custom/girchi_live/templates/girchi-live-page.html.twig
+++ b/web/modules/custom/girchi_live/templates/girchi-live-page.html.twig
@@ -1,9 +1,7 @@
-
-
-<div class="container">
+<div class="container girchitv-live">
     <div class="row">
-        <h1>GirchiTV Live</h1>
+        <h1>· Girchi TV Live ·</h1>
 
-        <div class="jsmpeg" data-url="{{ live_url }}"></div>
+        <iframe class="live-frame" src="{{ live_url }}" allowfullscreen></iframe>
     </div>
 </div>
